- Separated the chat components a bit - Added background with hover effects - Added a smoother scrollbar - Fixed some of the spacings for grid with the chat - Also, added a send button - Added timestamp in the chat on hover
- TBD: Potentially a button to minimize chat for mobile devices?

--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -1,109 +1,136 @@
 :root {
-  --chat-row-template: 60% 1fr 15rem;
-  /* --chat-row-template: 7.5rem 1fr 7.5rem; */
-  --room-link-label-font-size: 1.6rem;
-  --composer-font-size: var(--room-link-label-font-size);
-  --chat-line-font-size: var(--room-link-label-font-size);
-  --chat-line-padding: 0.5rem 1rem;
+	--chat-row-template: 1fr 8rem;
+	--room-link-label-font-size: 1.6rem;
+	--composer-font-size: var(--room-link-label-font-size);
 }
 
 @media (max-width: 960px) {
-  /* Large Screens and below */
-  :root {
-    --chat-row-template: 5.5rem 1fr 7.5rem;
-    --room-link-label-font-size: 1.4rem;
-    --chat-line-padding: 0 1rem;
-  }
+
+	/* Large Screens and below */
+	:root {
+		--chat-row-template: 1fr 7.5rem;
+		--room-link-label-font-size: 1.4rem;
+	}
 }
 
 /* Popup container - to display Room link is copied to clipboard */
 .popup {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 /* The actual popup */
 .popup .popuptext {
-  /* visibility: fixed; */
-  visibility: hidden;
-  width: 200px;
-  background-color: #fa7751;
-  color: #1c202a;
-  text-align: center;
-  /* border-radius: 0.6rem; */
-  padding: 0.8rem 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 0rem;
-  margin-left: 30rem;
+	/* visibility: fixed; */
+	visibility: hidden;
+	width: 200px;
+	background-color: #fa7751;
+	color: #1c202a;
+	text-align: center;
+	/* border-radius: 0.6rem; */
+	padding: 0.8rem 0;
+	position: absolute;
+	z-index: 1;
+	bottom: 0rem;
+	margin-left: 30rem;
 }
 
 .popup .show {
-  visibility: visible;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s;
+	visibility: visible;
+	-webkit-animation: fadeIn 1s;
+	animation: fadeIn 1s;
 }
 
 /* Chat */
 .chat {
-  background: transparent;
-  /* background: var(--color--tertiary); */
-  display: grid;
-  grid-template-rows: var(--chat-row-template);
+	background: transparent;
+	/* background: var(--color--tertiary); */
+	display: grid;
+	grid-template-rows: var(--chat-row-template);
+}
+
+.chat::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	background: black;
+
+	transition: opacity 0.3s ease-in-out;
+}
+
+.chat:hover::before {
+	opacity: .4;
 }
 
 .chat__wrapper {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 .chat__wrapper .messages {
-  overflow-x: hidden;
-  overflow-y: auto;
-  background-color: rgba(0, 0, 0, 0);
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+	overflow-x: hidden;
+	overflow-y: auto;
+	background-color: rgba(0, 0, 0, 0);
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+
+.chat__wrapper .messages::-webkit-scrollbar {
+	border-radius: 15px;
+	width: 11px;
+}
+
+/* Track */
+.chat__wrapper .messages::-webkit-scrollbar-track {
+	background: var(--color--redshade);
+}
+
+/* Handle */
+.chat__wrapper .messages::-webkit-scrollbar-thumb {
+	background: #9b9a9a;
+	border: 1px solid black;
+	box-shadow: 0px 0px 20px 0px #000000;
+	border-radius: 5px;
+}
+
+/* Handle on hover */
+.chat__wrapper .messages::-webkit-scrollbar-thumb:hover {
+	background: #636262;
 }
 
 .chat__room-link {
-  display: inline-flex;
-  place-content: center;
-  place-items: center;
-}
-
-.chat-line__link {
-  color: var(--color-text-link);
-  text-decoration: underline;
+	display: inline-flex;
+	place-content: center;
+	place-items: center;
 }
 
 .room-link {
-  background: var(--color-bg-input);
-  padding: 0.5rem 1.5rem;
-  border-radius: 40px;
-  display: inline-flex;
-  place-content: center;
-  place-items: center;
+	background: var(--color-bg-input);
+	padding: 0.5rem 1.5rem;
+	border-radius: 40px;
+	display: inline-flex;
+	place-content: center;
+	place-items: center;
 }
 
 .room-link__label {
-  color: var(--color-text-base);
-  font-size: var(--room-link-label-font-size);
-  padding: 0 1rem 0 0;
-}
-
-.chat-line {
-  font-size: var(--chat-line-font-size);
-  padding: var(--chat-line-padding);
+	color: var(--color-text-base);
+	font-size: var(--room-link-label-font-size);
+	padding: 0 1rem 0 0;
 }
 
 .chime-web-composer {
-  font-size: var(--composer-font-size);
-  background: var(--color-bg-chat);
-  padding: 1.5rem;
+	font-size: var(--composer-font-size);
+	background: var(--color-bg-chat);
+	padding: 1.5rem;
 }
